// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audio > explicit SFX directive schedules audio/load + audio/update 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "audio/load",
    "params": {
      "channel": "sound",
      "cues": [
        0,
      ],
      "key": "audio.beep",
      "loop": false,
      "loopEnd": 0,
      "loopStart": 0,
      "name": "beep",
      "src": "https://example.com/beep.wav",
      "syncedTo": "audio.beep",
      "tones": [],
      "type": "audio",
      "volume": 1,
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "audio/load",
    "params": {
      "channel": "typewriter",
      "key": "synth.typewriter~t0s1b0",
      "name": "typewriter",
      "synth": {
        "$link": {
          "audio": {},
          "character": {},
          "image": {},
          "inflection": {},
          "prosody": {},
          "typewriter": {},
        },
        "$name": "typewriter",
        "$type": "synth",
        "arpeggio": {
          "direction": "up",
          "glide": 0,
          "levels": [
            0.2,
            1,
            0.1,
            0.05,
            0.01,
            1,
            0,
          ],
          "max_notes": 160,
          "max_octaves": 1,
          "on": true,
          "phases": [],
          "rate": 100,
          "rate_ramp": 0,
          "shapes": [],
          "tones": [
            0,
          ],
        },
        "bitcrush": {
          "crush": 0.5,
          "crush_ramp": 0,
          "on": false,
          "skip": 0.5,
          "skip_ramp": 0,
        },
        "delay": {
          "feedback": 0.75,
          "length": 0.15,
          "on": false,
          "strength": 0.5,
        },
        "distortion": {
          "edge": 0.5,
          "edge_ramp": 0,
          "grit": 0.5,
          "grit_ramp": 0,
          "on": false,
        },
        "envelope": {
          "attack": 0.01,
          "decay": 0.003,
          "level": 0.15,
          "offset": 0,
          "release": 0.01,
          "sustain": 0.04,
        },
        "fm": {
          "on": false,
          "ratio": 1,
          "ratio_ramp": 0,
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "harmonics": {
          "count": 4,
          "count_ramp": 0,
          "falloff": 0.5,
          "falloff_ramp": 0,
          "on": false,
        },
        "highpass": {
          "cutoff": 6600,
          "cutoff_ramp": 0,
          "on": true,
        },
        "lowpass": {
          "cutoff": 4000,
          "cutoff_ramp": 0,
          "on": false,
          "resonance": 0.5,
        },
        "phase": 0,
        "pitch": {
          "frequency": 3465,
          "frequency_jerk": 0,
          "frequency_ramp": 0,
          "frequency_torque": 0,
        },
        "reverb": {
          "damping": 0.5,
          "mix": 0.5,
          "on": false,
          "room_size": 0.5,
        },
        "ring": {
          "on": false,
          "rate": 1620,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "shape": "tangent",
        "tremolo": {
          "on": false,
          "rate": 10,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "vibrato": {
          "on": true,
          "rate": 55,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "volume": 0.5,
        "wahwah": {
          "on": false,
          "rate": 5,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
      },
      "tones": [
        {
          "bend": 0,
          "speed": 1,
          "time": 0,
        },
      ],
      "type": "synth",
      "volume": 0.5,
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "audio/update",
    "params": {
      "channel": "sound",
      "updates": [
        {
          "after": undefined,
          "control": "start",
          "key": "audio.beep",
          "loop": false,
          "now": undefined,
          "over": undefined,
          "to": undefined,
        },
      ],
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "audio/update",
    "params": {
      "channel": "typewriter",
      "updates": [
        {
          "after": undefined,
          "control": "start",
          "key": "synth.typewriter~t0s1b0",
          "loop": undefined,
          "now": undefined,
          "over": undefined,
          "to": undefined,
        },
      ],
    },
  },
]
`;

exports[`audio > typewriter synth tones scheduled for voiced dialogue 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "audio/load",
    "params": {
      "channel": "typewriter",
      "key": "synth.character~t0s1b0~t0.07500000000000001s1b0",
      "name": "character",
      "synth": {
        "$link": {
          "audio": {},
          "character": {},
          "image": {},
          "inflection": {},
          "prosody": {},
          "typewriter": {},
        },
        "$name": "character",
        "$type": "synth",
        "arpeggio": {
          "direction": "up",
          "glide": 0,
          "levels": [],
          "max_notes": 160,
          "max_octaves": 1,
          "on": false,
          "phases": [],
          "rate": 50,
          "rate_ramp": 0,
          "shapes": [],
          "tones": [
            0,
            4,
            7,
          ],
        },
        "bitcrush": {
          "crush": 0.5,
          "crush_ramp": 0,
          "on": false,
          "skip": 0.5,
          "skip_ramp": 0,
        },
        "delay": {
          "feedback": 0.75,
          "length": 0.15,
          "on": false,
          "strength": 0.5,
        },
        "distortion": {
          "edge": 0.5,
          "edge_ramp": 0,
          "grit": 0.5,
          "grit_ramp": 0,
          "on": false,
        },
        "envelope": {
          "attack": 0.007,
          "decay": 0.003,
          "level": 0.5,
          "offset": 0,
          "release": 0.01,
          "sustain": 0.035,
        },
        "fm": {
          "on": false,
          "ratio": 1,
          "ratio_ramp": 0,
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "harmonics": {
          "count": 4,
          "count_ramp": 0,
          "falloff": 0.5,
          "falloff_ramp": 0,
          "on": false,
        },
        "highpass": {
          "cutoff": 2000,
          "cutoff_ramp": 0,
          "on": false,
        },
        "lowpass": {
          "cutoff": 4000,
          "cutoff_ramp": 0,
          "on": false,
          "resonance": 0.5,
        },
        "phase": 0,
        "pitch": {
          "frequency": 440,
          "frequency_jerk": 0,
          "frequency_ramp": 0,
          "frequency_torque": 0,
        },
        "reverb": {
          "damping": 0.5,
          "mix": 0.5,
          "on": false,
          "room_size": 0.5,
        },
        "ring": {
          "on": false,
          "rate": 1620,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "shape": "triangle",
        "tremolo": {
          "on": false,
          "rate": 10,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "vibrato": {
          "on": false,
          "rate": 5,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
        "volume": 0.5,
        "wahwah": {
          "on": false,
          "rate": 5,
          "rate_ramp": 0,
          "shape": "sine",
          "strength": 0.5,
          "strength_ramp": 0,
        },
      },
      "tones": [
        {
          "bend": 0,
          "speed": 1,
          "time": 0,
        },
        {
          "bend": 0,
          "speed": 1,
          "time": 0.07500000000000001,
        },
      ],
      "type": "synth",
      "volume": 0.5,
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "audio/update",
    "params": {
      "channel": "typewriter",
      "updates": [
        {
          "after": undefined,
          "control": "start",
          "key": "synth.character~t0s1b0~t0.07500000000000001s1b0",
          "loop": undefined,
          "now": undefined,
          "over": undefined,
          "to": undefined,
        },
      ],
    },
  },
]
`;
